cabal-version:      3.0
name:               ortools-sat
version:            0.1.0.0
license:            BSD-3-Clause
author:             Niels Bergsma
maintainer:         n.bergsma@gmail.com
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:          warnings
    exposed-modules: 
        OrTools.Sat.Model.Variable
        OrTools.Sat.Model.LinearExpression
        OrTools.Sat.Model.Constant
        OrTools.Sat.Model.Objective
        OrTools.Sat.Model.Constraint
        OrTools.Sat.Model.Parameters
        OrTools.Sat.Model.Model
        OrTools.Sat.Model.Request
        OrTools.Sat.Model.Response
        OrTools.Sat.Model.Encode
        OrTools.Sat.Model.Decode
        OrTools.Sat.Model.Solution
        OrTools.Sat
    default-extensions:
        OverloadedRecordDot
        RecordWildCards
        FunctionalDependencies

    build-depends:    
        base >=4.14 && <5,
        proto3-wire >= 1.2.0,
        bytestring, 
        mtl
    hs-source-dirs:   src
    default-language: GHC2024

test-suite spec
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:
        base >=4.14 && <5,
        tasty,
        tasty-hunit,
        ortools-sat,
        bytestring,
        base64-bytestring,
        mtl
    
    default-language:    GHC2024